# humanID

./: README.md  genome-device.service  tailwind.config.ts
biometrics_server/: .dockerignore  Dockerfile  README.md  build.sh  golem_endpoints.py  main.py  main_fastapi.py  release.yaml  requirements.txt  similarity_check.sh  test_profile.txt  test_profile2.txt
demo_banking_app/src/app/: globals.css
docs/: blueprint.md
frontend/: .dockerignore  Dockerfile  README-RainbowKit.md  build.sh  next.config.ts  package-lock.json  package.json  release.yaml  tailwind.config.ts
frontend/docs/: blueprint.md
frontend/src/ai/: dev.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: confetti.tsx  dna-sequencing-button.tsx  logo.tsx
genome_data/: gen.vcf
genome_device/: .dockerignore  Dockerfile  README-DEVICE-SETUP.md  README-SERVER.md  README.md  bioinformatics.py  build.sh  device.py  example.vcf  generate_str_profile.sh  genome-device.service  quick-start.sh  release.yaml  requirements.txt  send_data.py  server.py  setup-device.sh  setup-systemd-https.sh  setup-systemd.sh  start-device.sh  test_server.py
humanity_sdk/python/: README.md  __init__.py  example.py  sdk.py
humanity_sdk/rust/: Cargo.toml  README.md
humanity_sdk/rust/examples/: basic_usage.rs
humanity_sdk/rust/src/: lib.rs
humanity_sdk/typescript/: README.md  example.ts  package.json  tsconfig.json
src/: tailwind.config.ts
src/ai/: dev.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: confetti.tsx  logo.tsx
src/lib/: context.tsx
(+75 files in other folders)
