[package]
name = "humanity-sdk"
version = "1.0.0"
edition = "2021"
authors = ["HumanID Team <team@humanid.network>"]
description = "Rust SDK for Humanity Verification Network"
license = "MIT"
repository = "https://github.com/humanid/humanity-sdk-rust"
homepage = "https://github.com/humanid/humanity-sdk-rust"
documentation = "https://docs.rs/humanity-sdk"
keywords = ["humanity", "verification", "blockchain", "sdk", "rust", "humanid"]
categories = ["cryptography", "web-programming", "api-bindings"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "humanity_sdk"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
